# ESP32-IoT-Projects

./: README.md
ESP-NOW_Demo/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  README.md  sdkconfig.defaults
ESP32C6 Touch LCD 1.47 SMNT Demo/: FONT_8x12_DOCUMENTATION.txt  FONT_8x5_DOCUMENTATION.txt  README.md  sdkconfig.defaults
ESP32C6 Touch LCD 1.47 Touch Demo/: CONTRIBUTING.md  FLOWCHART.md  README.md
ESP32C6 Touch LCD 1.47 WiFi Internet Clock/: .gitignore  BUFFERED_FONTS_SUMMARY.md  CMakeLists.txt  FLOWCHART.md  LICENSE
ESP32C6_Power_Gating_Demo/: .gitignore  CMakeLists.txt  FLOWCHART.md  README.md  sdkconfig.defaults
ESP32C6_Secure_Boot_Https_Ota_Ref/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  README.md  SECURITY.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.production  secure_boot_signing_key.pem
ESP32S3_Custom_Efuse_Gen_Demo/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  FLOWCHARTS.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
ESP32S3_Custom_Efuse_Gen_Demo/main/: CMakeLists.txt  Kconfig.projbuild  esp_efuse_custom_table.csv  main.c
ESP32S3_LittleFS_Demo/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
ESP32_FreeRTOS_SMP_IPC_Demo/: CMakeLists.txt  README.md  sdkconfig.defaults
ESP32_Low_Power_Reference/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  POWER_OPTIMIZATION.md  README.md  sdkconfig  sdkconfig.defaults
ESP32_NTP_Client/: .gitignore  README.md
ESP32_SPI_Flash_Demo/: LICENSE  README.md
ESP32_Uart_Event_Ref/: CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  README.md  sdkconfig.defaults
ESP32_WiFi_Scanner_Application/: README.md
LEDC_PWM_Demo/: CMakeLists.txt  README.md
Preemptive_vs_Non_Preemptive_Scheduling_Demo/: CHANGELOG.md  CONTRIBUTING.md  FLOWCHARTS.md  README.md  sdkconfig.defaults
QUEUE_Producer_Consumer_Demo/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  README.md
Semaphore_Mutex_Demo/: CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  LICENSE  README.md  sdkconfig.defaults
Task_Synchronization_Using_Event_Groups_Demo/: CMakeLists.txt  CONTRIBUTING.md  FLOWCHART.md  README.md  sdkconfig.defaults  sdkconfig.old
UART_Demo/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
USB_HID_Keyboard/: CMD Automation Commands - Usage Guide.md  README.md  Setup Instructions.md  TinyUSB Callbacks - How They Work.md  sdkconfig.defaults
Watchdog_Use_Demo/: CHANGELOG.md  CONTRIBUTING.md  FLOWCHART.md  LICENSE  QUICKSTART.md  README.md
esp32_dth11_thingsboard_project/: .gitignore  CMakeLists.txt  CONFIGURATION_GUIDE.md  README.md  THINGSBOARD_DASHBOARD_SETUP.md  idf_component.yml  sdkconfig.defaults
esp32_i2c_devices_demo/: CMakeLists.txt  README.md
esp32_pwm_ledc_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32_uart_beginner/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32s3_addressable_rgb_led/: .gitignore  CMakeLists.txt  README.md
esp32s3_ble_long_range/: CMakeLists.txt  FLOWCHART.md  README.md  TESTING.md  sdkconfig  sdkconfig.defaults
esp32s3_context_switch_demo/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
esp32s3_digital_scale/: ARTICLE.md  CMakeLists.txt  FLOWCHART.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
esp32s3_rylr896_ulp_lora/main/: CMakeLists.txt  main.c  rylr896.c  rylr896.h
esp32s3_rylr896_ulp_lora/main/ulp/: ulp_lora_scheduler.c
(+240 files in other folders)
